force-app/main/default/objects/Site_Visit__c/fields/Actual_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Actual_DateTime__c</fullName>
    <label>Actual DateTime</label>
    <type>DateTime</type>
</CustomField>