force-app/main/default/objects/Site_Visit__c/fields/Buyer_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Feedback__c</fullName>
    <label>Buyer Feedback</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>