force-app/main/default/objects/Site_Visit__c/fields/Concessions_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Concessions_Discussed__c</fullName>
    <label>Concessions Discussed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>