force-app/main/default/objects/Site_Visit__c/fields/Conducted_By__c.field-meta.xml
<CustomField>
    <fullName>Conducted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conducted By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Site Visits Conducted</relationshipLabel>
    <relationshipName>Site_Visits_Conducted</relationshipName>
    <type>Lookup</type>
</CustomField>