force-app/main/default/objects/Site_Visit__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Interested-Hot</fullName><default>false</default><label>Interested-Hot</label></value>
            <value><fullName>Interested-Warm</fullName><default>false</default><label>Interested-Warm</label></value>
            <value><fullName>Not Interested</fullName><default>false</default><label>Not Interested</label></value>
            <value><fullName>Needs Follow-up</fullName><default>false</default><label>Needs Follow-up</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>