force-app/main/default/objects/Site_Visit__c/fields/Primary_Unit__c.field-meta.xml
<CustomField>
    <fullName>Primary_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Unit Interest</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Site Visits</relationshipLabel>
    <relationshipName>Site_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>