force-app/main/default/objects/Site_Visit__c/fields/Source_Channel__c.field-meta.xml
<CustomField>
    <fullName>Source_Channel__c</fullName>
    <formula>IF(NOT(ISBLANK(Opportunity__c)), TEXT(Opportunity__r.Source_Channel__c), IF(NOT(ISBLANK(Lead__c)), TEXT(Lead__r.Source_Channel__c), ""))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Channel</label>
    <type>Text</type>
</CustomField>