force-app/main/default/objects/Site_Visit__c/fields/Units_Shown__c.field-meta.xml
<CustomField>
    <fullName>Units_Shown__c</fullName>
    <label>Units Shown</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>